# effective-mobile-test

./: README.md  pyproject.toml
effective_auth/: manage.py  test_data.json
effective_auth/api/: authentication.py  exceptions.py  models.py  serializers.py  urls.py  views.py
effective_auth/api/migrations/: 0001_initial.py
effective_auth/effective_auth/: asgi.py  settings.py  urls.py  wsgi.py
